# STEP-file-viewer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
